[gd_scene load_steps=7 format=3 uid="uid://d3w6u6nmuwons"]

[ext_resource type="Script" uid="uid://c6dfffgv5d1ie" path="res://scripts/gary.gd" id="1_ppxau"]
[ext_resource type="Script" uid="uid://bh77r8leevuyk" path="res://scripts/States/state_machine.gd" id="2_jrfbp"]
[ext_resource type="Script" uid="uid://crqhiadqxedfy" path="res://scripts/States/gary_wander_state.gd" id="3_vjakc"]
[ext_resource type="Script" uid="uid://c7kr5g88540x3" path="res://scripts/States/gary_hungry_state.gd" id="4_jrfbp"]
[ext_resource type="PackedScene" uid="uid://70q8lok643df" path="res://scenes/components/health_component.tscn" id="5_ugrsq"]
[ext_resource type="Texture2D" uid="uid://cc6n5g2j23kmp" path="res://assets/fish/Gary.png" id="6_vjakc"]

[node name="gary" type="Node2D" node_paths=PackedStringArray("health") groups=["Fish"]]
texture_filter = 1
script = ExtResource("1_ppxau")
hungerTimerRange = Vector2(60, 120)
moneyTimerRange = Vector2(10, 15)
speed = 30.0
health = NodePath("healthComponent")

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_jrfbp")
initial_state = NodePath("wander")

[node name="wander" type="Node" parent="state_machine" node_paths=PackedStringArray("fish")]
script = ExtResource("3_vjakc")
fish = NodePath("../..")

[node name="hungry" type="Node" parent="state_machine" node_paths=PackedStringArray("fish")]
script = ExtResource("4_jrfbp")
fish = NodePath("../..")
speed = 110.0

[node name="healthComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("5_ugrsq")]
maxHealth = 1
sprite = NodePath("../sprite2D")

[node name="sprite2D" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("6_vjakc")
